2006-09-01  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.10 and bumped up to version
	0.0.11.

2006-06-08  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Checking for the 'makeindex' program and added
	the functions reference provided by Gunther Kraut.  Thanks!

2006-05-29  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.9 and bumped up to version
	0.0.10.

2006-01-31  Stefan Jahn  <stefan@lkcc.org>

	* doxygen/Makefile.am: Added doxygen sub directory.

2006-01-22  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.8 and bumped up to version
	0.0.9.

2005-11-05  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Setup a package for CVS.

	* ChangeLog: Created this file.